# algorithmics

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
common/: CMakeLists.txt
common/include/common/: dummy.h
lessons/: CMakeLists.txt
lessons/01_basics/: CMakeLists.txt
